# hashistack-vagrant

./: .gitignore  README.md  Vagrantfile  pyproject.toml
consul-server/: consul.hcl
nomad-client/: example.nomad  example2.nomad  example3.nomad  factorial.nomad  nomad.hcl  traefik.nomad.hcl  whoami.nomad.hcl
nomad-server/: nomad.hcl
provision/: deploy.py
provision/inventory/: vagrant.py
provision/tasks/: consul_client.py  consul_common.py  consul_server.py  dependencies.py  docker.py  firewall.py  nomad_client.py  nomad_common.py  nomad_server.py  vault.py
sample-app/: Dockerfile  app.nomad.tpl  go.mod  main.go  pyproject.toml  waypoint.hcl
shared/: consul-client.hcl  consul.service  nomad-common.hcl  nomad.service  start-job.sh
src/: app.py  pyproject.toml
vault-server/: vault.hcl  vault.service
waypoint-hello/: nomad.hcl
