
[project]
description = ""
authors = [
    {name = "Samuel Murillo", email = "contact@samuelmurillo.xyz"},
]
dependencies = [
    "requests>=2.31.0",
    "pyinfra>=2.7",
    "pyinfra-docker>=2.1",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
lint = [
    "black>=23.7.0",
    "ruff>=0.0.278",
]

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120