[tool.poetry]
name = "hashistack-python"
version = "0.1.0"
description = ""
authors = ["Samuel Murillo <contact@samuelmurillo.xyz>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^2.0.2"
hvac = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
